--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -11,7 +10,11 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "extract-dataset": "tsx ml/extract_dataset.ts"
+    "extract-dataset": "tsx ml/extract_dataset.ts",
+    "firebase:emulators": "firebase emulators:start",
+    "firebase:deploy": "firebase deploy",
+    "firebase:deploy:rules": "firebase deploy --only firestore:rules,storage",
+    "firebase:deploy:hosting": "firebase deploy --only hosting"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
@@ -65,6 +68,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "firebase-tools": "^14.14.0",
     "genkit-cli": "^1.8.0",
     "image-hash": "^5.3.2",
     "postcss": "^8",
