--- a/package.json
+++ b/package.json
@@ -3,83 +3,79 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 9004 --hostname 0.0.0.0",
+    "dev": "next dev --turbopack --port 9003 --hostname 0.0.0.0",
+    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
+    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "extract-dataset": "tsx ml/extract_dataset.ts",
+    "firebase:emulators": "firebase emulators:start",
+    "firebase:deploy": "firebase deploy",
+    "firebase:deploy:rules": "firebase deploy --only firestore:rules,storage",
+    "firebase:deploy:hosting": "firebase deploy --only hosting"
   },
   "dependencies": {
-    "@firebase/auth": "^1.7.2",
-    "@firebase/firestore": "^4.6.1",
-    "@firebase/storage": "^0.12.5",
-    "@google/generative-ai": "^0.7.1",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-table": "^8.16.0",
-    "@tremor/react": "^3.16.1",
-    "autoprefixer": "^10.4.19",
-    "class-variance-authority": "^0.7.0",
-
+    "@genkit-ai/googleai": "^1.8.0",
+    "@genkit-ai/next": "^1.8.0",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-menubar": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack-query-firebase/react": "^1.0.5",
+    "@tanstack/react-query": "^5.66.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "csv-writer": "^1.6.0",
     "date-fns": "^3.6.0",
-    "firebase": "^10.11.1",
-    "firebase-admin": "^12.1.0",
-    "form-data": "^4.0.0",
-    "geist": "^1.3.0",
-    "genkit": "^0.4.1",
-    "genkit-tools": "^0.4.1",
-    "input-otp": "^1.2.4",
+    "dotenv": "^16.5.0",
+    "firebase": "^11.8.1",
+    "genkit": "^1.8.0",
     "jspdf": "^2.5.1",
-    "lucide-react": "^0.378.0",
-    "next": "^14.2.3",
-
-    "next-themes": "^0.3.0",
-    "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^4.2.67",
-    "postcss": "^8.4.38",
+    "jspdf-autotable": "^3.8.2",
+    "lucide-react": "^0.475.0",
+    "next": "15.2.3",
+    "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.51.4",
-    "recharts": "^2.12.7",
-    "sonner": "^1.4.41",
-    "supports-color": "^9.4.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.3",
+    "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1",
-    "vaul": "^0.9.0",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20.12.11",
-    "@types/pdf-parse": "^1.1.4",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^9.0.8",
-    "eslint": "^9.2.0",
-    "eslint-config-next": "^14.2.3",
-    "typescript": "^5.4.5"
+    "@types/jspdf": "^2.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "firebase-tools": "^14.14.0",
+    "genkit-cli": "^1.8.0",
+    "image-hash": "^5.3.2",
+    "postcss": "^8",
+    "sharp": "^0.34.3",
+    "tailwindcss": "^3.4.1",
+    "tesseract.js": "^6.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
