--- a/package.json
+++ b/package.json
@@ -47,13 +47,12 @@
     "csv-writer": "^1.6.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "firebase": "^11.8.1",
+    "firebase": "^11.10.0",
     "genkit": "^1.8.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
-    "patch-package": "^8.0.0",
+    "next": "^15.5.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -70,7 +69,6 @@
     "@types/react-dom": "^18.3.7",
     "firebase-tools": "^14.14.0",
     "genkit-cli": "^1.8.0",
-    "image-hash": "^5.3.2",
     "postcss": "^8",
     "sharp": "^0.34.3",
     "tailwindcss": "^3.4.1",
