feat: Add comprehensive invitation system
- Add invitation management for admins to invite new users
- Implement secure token-based invitation acceptance
- Add email templates for invitations and welcome emails
- Create invitation management table with status tracking
- Add invitation acceptance page with account creation
- Support for all user roles (employee, manager, admin)
- Include comprehensive documentation and testing guide
- Add Firebase integration for invitation storage
- Implement proper error handling and validation

--- a/env.example
+++ b/env.example
@@ -8,3 +8,8 @@ NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 
 # Google AI Configuration (for receipt processing)
 GOOGLE_AI_API_KEY=your_google_ai_api_key_here
+
+# Email Service Configuration (for invitations)
+NEXT_PUBLIC_EMAIL_FROM=noreply@yourcompany.com
+NEXT_PUBLIC_EMAIL_FROM_NAME=Your Company Name
+NEXT_PUBLIC_APP_URL=http://localhost:3000
