Add production deployment configuration and hosting setup
- Configure Firebase App Hosting for Next.js
- Add production environment templates
- Create deployment scripts and CI/CD pipeline
- Add comprehensive testing and verification tools
- Implement performance monitoring and security hardening
- Add domain setup guide for Porkbun DNS configuration
- Create production optimization and caching strategies

--- a/firebase.json
+++ b/firebase.json
@@ -8,19 +8,12 @@
   "storage": {
     "rules": "storage.rules"
   },
-  "hosting": {
-    "public": "out",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
+  "apphosting": {
+    "backend": {
+      "runConfig": {
+        "maxInstances": 1
       }
-    ]
+    }
   },
   "emulators": {
     "auth": {
