fix: update Firebase configuration for deployment
- Fixed apphosting configuration format
- Added proper rootDir and ignore patterns
- Ready for deployment with GitHub secrets

--- a/firebase.json
+++ b/firebase.json
@@ -8,33 +8,15 @@
   "storage": {
     "rules": "storage.rules"
   },
-  "apphosting": [
-    {
-      "backendId": "receiptshield-backend",
-      "primaryRegion": "us-central1",
-      "runConfig": {
-        "maxInstances": 1
-      },
-      "ignore": [
-        "firebase.json",
-        "**/.*",
-        "**/node_modules/**",
-        "**/.next/**",
-        "**/out/**",
-        "**/ml/**",
-        "**/docs/**",
-        "**/scripts/**",
-        "**/.github/**",
-        "**/*.md",
-        "**/deploy.sh",
-        "**/env.*",
-        "**/venv/**",
-        "**/receipts/**",
-        "**/*.log",
-        "**/firebase-debug.log"
-      ]
-    }
-  ],
+  "apphosting": {
+    "backendId": "receiptshield-backend",
+    "rootDir": ".",
+    "ignore": [
+      "**/node_modules/**",
+      "**/.next/**",
+      "**/ml/**"
+    ]
+  },
   "emulators": {
     "auth": {
       "port": 9099
