feat: add auto-sync workflow for fork
- Added GitHub Actions workflow to automatically sync with upstream
- Configured to sync from tonnguyen291/ReceiptShield
- Runs every hour and can be triggered manually
- Ensures fork stays updated with original repository

--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,19 @@
 {
+  "hosting": {
+    "public": ".next",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**",
+      "**/ml/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
   "firestore": {
     "database": "(default)",
     "location": "nam5",
@@ -7,15 +22,6 @@
   },
   "storage": {
     "rules": "storage.rules"
-  },
-  "apphosting": {
-    "backendId": "receiptshield-backend",
-    "rootDir": ".",
-    "ignore": [
-      "**/node_modules/**",
-      "**/.next/**",
-      "**/ml/**"
-    ]
   },
   "emulators": {
     "auth": {
