--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,20 +44,10 @@ jobs:
         NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
         NODE_ENV: production
         
-    - name: Deploy to Firebase App Hosting
+    - name: Deploy to Firebase Hosting
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
       run: |
         npm install -g firebase-tools
-        firebase deploy --only apphosting --token ${{ secrets.FIREBASE_TOKEN }}
+        firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        
-    - name: Deploy to Vercel (Alternative)
-      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-      uses: amondnet/vercel-action@v25
-      with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-        vercel-org-id: ${{ secrets.ORG_ID }}
-        vercel-project-id: ${{ secrets.PROJECT_ID }}
-        working-directory: ./
-        vercel-args: '--prod'
