--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,12 +47,10 @@ jobs:
     - name: Deploy to Firebase Hosting
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
       run: |
-        npm install -g firebase-tools
-        if [ -n "${{ secrets.FIREBASE_TOKEN }}" ]; then
-          echo "🚀 Deploying to Firebase Hosting..."
-          firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
-          echo "✅ Firebase deployment completed successfully!"
-        else
+        echo "🔍 Checking Firebase deployment prerequisites..."
+        
+        # Check if FIREBASE_TOKEN exists
+        if [ -z "${{ secrets.FIREBASE_TOKEN }}" ]; then
           echo "⚠️ FIREBASE_TOKEN secret not found. Skipping Firebase deployment."
           echo "📝 To enable Firebase deployment, add FIREBASE_TOKEN to repository secrets:"
           echo "   1. Go to repository Settings > Secrets and variables > Actions"
@@ -60,6 +58,35 @@ jobs:
           echo "   3. Name: FIREBASE_TOKEN"
           echo "   4. Value: [Your Firebase CI token]"
           echo "   5. Get token by running: firebase login:ci"
+          exit 0
+        fi
+        
+        echo "✅ FIREBASE_TOKEN found. Proceeding with deployment..."
+        
+        # Install Firebase CLI
+        echo "📦 Installing Firebase CLI..."
+        npm install -g firebase-tools@latest
+        
+        # Verify Firebase CLI installation
+        firebase --version
+        
+        # Check if firebase.json exists
+        if [ ! -f "firebase.json" ]; then
+          echo "❌ firebase.json not found. Cannot deploy to Firebase."
+          exit 1
+        fi
+        
+        echo "✅ firebase.json found. Configuration looks good."
+        
+        # Deploy to Firebase
+        echo "🚀 Deploying to Firebase Hosting..."
+        firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }} --debug
+        
+        if [ $? -eq 0 ]; then
+          echo "✅ Firebase deployment completed successfully!"
+        else
+          echo "❌ Firebase deployment failed!"
+          exit 1
         fi
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
