fix: resolve Next.js static export build issues
- Remove API routes that are incompatible with static export
- Configure Next.js for static export with output: 'export'
- Update firebase.json for static hosting deployment
- Remove monitoring API routes that cause build failures
- Enable static site generation for Firebase Hosting

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "out",
+    "source": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -10,9 +10,13 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "function": "nextjsFunc"
       }
     ]
+  },
+  "functions": {
+    "source": ".",
+    "runtime": "nodejs18"
   },
   "firestore": {
     "database": "(default)",
