--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         
     - name: Install dependencies
@@ -65,7 +65,7 @@ jobs:
         
         # Install Firebase CLI
         echo "📦 Installing Firebase CLI..."
-        npm install -g firebase-tools@latest
+        npm install -g firebase-tools@13.0.0
         
         # Verify Firebase CLI installation
         firebase --version
