Fix Firebase API key format in production config
- Quote API key value to ensure proper string handling
- This should resolve the 'API key not valid' error in production

The error occurred because the API key wasn't being properly loaded
from environment variables during the build process.

--- a/apphosting.production.yaml
+++ b/apphosting.production.yaml
@@ -37,7 +37,7 @@ env:
   
   # Firebase Configuration (from existing setup)
   - variable: NEXT_PUBLIC_FIREBASE_API_KEY
-    value: AIzaSyBJUMBq1qLQnJjNz7lp72lJ7awKeod3qMo
+    value: "AIzaSyBJUMBq1qLQnJjNz7lp72lJ7awKeod3qMo"
     availability:
       - BUILD
       - RUNTIME
