--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-writer": "^1.6.0",
@@ -72,6 +73,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.37.0",
     "@next/eslint-plugin-next": "^15.5.4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
