--- a/env.local.template
+++ b/env.local.template
@@ -16,7 +16,18 @@ EMAIL_FROM=noreply@receiptshield.com
 EMAIL_FROM_NAME=ReceiptShield
 NEXT_PUBLIC_APP_URL=http://localhost:9003
 
-# SMTP Configuration (for sending emails)
+# SendGrid Configuration (RECOMMENDED for production)
+# Sign up at https://sendgrid.com (free tier: 100 emails/day)
+SENDGRID_API_KEY=your_sendgrid_api_key_here
+SENDGRID_FROM_EMAIL=your_verified_email@example.com
+
+# Notes for SendGrid:
+# 1. Sign up for a free SendGrid account at https://sendgrid.com
+# 2. Create an API Key with "Mail Send" permissions
+# 3. Verify your sender email in SendGrid Settings → Sender Authentication
+# 4. Use the verified email as SENDGRID_FROM_EMAIL
+
+# SMTP Configuration (Alternative - Gmail for local testing)
 # For Gmail: Use your Gmail address and an App Password
 # Recommended Gmail settings: port 465 with secure SSL
 SMTP_HOST=smtp.gmail.com
@@ -29,3 +40,4 @@ SMTP_PASS=your_app_password_here
 # 1. Enable 2‑Step Verification on your Google account
 # 2. Create an App Password (Security → App passwords → Mail)
 # 3. Use the App Password as SMTP_PASS (not your regular password)
+# 4. Gmail has a limit of 100 emails/day for free accounts
