--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "build:analyze": "cross-env ANALYZE=true npm run build"
   },
   "dependencies": {
+    "@fastify/busboy": "^3.2.0",
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
+    "@google-cloud/storage": "^7.17.2",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -48,18 +50,43 @@
     "@sendgrid/mail": "^8.1.6",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@types/body-parser": "^1.19.6",
+    "@types/express": "^4.17.23",
+    "@types/express-serve-static-core": "^4.19.7",
+    "@types/http-errors": "^2.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/mime": "^1.3.5",
+    "@types/ms": "^2.1.0",
+    "@types/qs": "^6.14.0",
+    "@types/range-parser": "^1.2.7",
+    "@types/send": "^0.17.5",
+    "@types/serve-static": "^1.15.9",
+    "async-retry": "^1.3.3",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-writer": "^1.6.0",
     "date-fns": "^3.6.0",
+    "debug": "^4.4.3",
     "dotenv": "^16.5.0",
+    "farmhash-modern": "^1.1.0",
+    "fast-xml-parser": "^4.5.3",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.5.0",
     "genkit": "^1.8.0",
+    "jose": "^4.15.9",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "jwks-rsa": "^3.2.0",
+    "limiter": "^1.1.5",
+    "lodash.clonedeep": "^4.5.0",
+    "lru-cache": "^6.0.0",
+    "lru-memoizer": "^2.3.0",
     "lucide-react": "^0.475.0",
+    "mime": "^3.0.0",
+    "ms": "^2.1.3",
     "next": "^15.5.2",
+    "node-forge": "^1.3.1",
     "nodemailer": "^7.0.9",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -67,8 +94,10 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.4",
     "stripe": "^19.1.0",
+    "strnum": "^1.1.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -77,7 +106,7 @@
     "@next/eslint-plugin-next": "^15.5.4",
     "@types/canvas-confetti": "^1.9.0",
     "@types/jspdf": "^2.0.0",
-    "@types/node": "^20",
+    "@types/node": "^22.18.12",
     "@types/nodemailer": "^7.0.2",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
